fix attempt - content collapse mobile keyboard

--- a/main.css
+++ b/main.css
@@ -64,7 +64,7 @@ html{
 }
 body{
     text-align: center;
-    min-height: 100vh;
+    height: 100vh;
     background-color: var(--bg-color-primary);
 }
 
